--- a/app-manage/src/App.css
+++ b/app-manage/src/App.css
@@ -1,11 +1,13 @@
-*{
+* {
   padding: 0;
   margin: 0;
 }
+
 body {
   background-color: #1b1b1f;
   color: #f5f5f5;
   font-size: 16px;
+  line-height: 1.32;
   font-family: sans-serif;
 }
 
@@ -15,12 +17,14 @@ body {
   margin: 20vh auto;
 
 }
+
 .column {
   width: 50%;
   padding: 40px;
   margin: 20px;
   border: 1px solid gray;
 }
+
 .scroll {
   overflow-y: scroll;
   height: 500px;
@@ -28,7 +32,7 @@ body {
 
 
 .alert {
-  position: absolute;
+  position: fixed;
   top: 20px;
   left: calc(50% - 150px);
   padding: 16px;
@@ -41,11 +45,13 @@ body {
   z-index: 9999;
   animation: alert 0.25s linear;
 }
+
 @keyframes alert {
   0% {
     opacity: 0;
     top: 0;
   }
+
   100% {
     opacity: 1;
     top: 20px;
