--- a/app-manage/src/App.css
+++ b/app-manage/src/App.css
@@ -4,8 +4,8 @@
 }
 
 body {
-  background-color: #1b1b1f;
-  color: #f5f5f5;
+  background-color: #1e1e1e;
+  color: #c8c8c8;
   font-size: 16px;
   line-height: 1.32;
   font-family: sans-serif;
